--- a/public/styles/picker.css
+++ b/public/styles/picker.css
@@ -2,6 +2,14 @@ button {
     font-size: 3rem;
 }
 
+.canvas {
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+}
 .navbar {
     display:none;
 }
