--- a/public/styles/picker.css
+++ b/public/styles/picker.css
@@ -2,7 +2,7 @@ button {
     font-size: 3rem;
 }
 
-.canvas {
+#canvas {
 -webkit-touch-callout: none;
 -webkit-user-select: none;
 -khtml-user-select: none;
